# sklearn-arrow

./: .gitignore  Dockerfile  README.md  client.ipynb  pyproject.toml  server.ipynb  server.py
