[tool.poetry]
name = "sklearn-arrow"
version = "0.1.0"
description = ""
authors = ["Felipe Ortega <felipeortegabustamante@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyarrow = "^15.0.1"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
